Added service layers for the controllers